@@ -5,20 +5,21 @@
 
   <groupId>vavi</groupId>
   <artifactId>vavi-apps-aozora</artifactId>
-  <version>0.0.2</version>
+  <version>0.0.3</version>
 
   <build>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.12.1</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-          <encoding>utf-8</encoding>
+          <source>17</source>
+          <target>17</target>
           <compilerArgs>
             <arg>-XDignore.symbol.file</arg> <!-- for com.apple.eawt -->
+            <arg>--add-exports</arg>
+            <arg>java.desktop/com.apple.eawt=ALL-UNNAMED</arg>
           </compilerArgs>
           <!-- https://stackoverflow.com/a/30472473 -->
           <fork>true</fork>
@@ -27,9 +28,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>3.0.0-M7</version>
+        <version>3.2.5</version>
         <configuration>
           <argLine>
+            --add-opens java.desktop/com.apple.eawt=ALL-UNNAMED
             -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
           </argLine>
           <trimStackTrace>false</trimStackTrace>
@@ -40,15 +42,15 @@
 
   <repositories>
     <repository>
+      <id>appodeal.com</id> <!-- for xml-apis:xml-apis-ext -->
+      <url>https://artifactory.appodeal.com/appodeal-public/</url>
+    </repository>
+    <repository>
       <id>jitpack.io</id>
       <url>https://jitpack.io</url>
     </repository>
     <repository>
-      <id>peg-mvn-repo</id>
-      <url>https://raw.github.com/jeronimonunes/PEG/mvn-repo/</url>
-    </repository>
-    <repository>
-      <id>gitlab-maven</id>
+      <id>gitlab-maven</id> <!-- vavi-text-aozora -->
       <url>https://gitlab.com/api/v4/projects/39845225/packages/maven</url>
     </repository>
   </repositories>
@@ -58,7 +60,7 @@
       <dependency>
         <groupId>org.junit</groupId>
         <artifactId>junit-bom</artifactId>
-        <version>5.9.1</version>
+        <version>5.14.1</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
@@ -69,19 +71,44 @@
     <dependency>
       <groupId>vavi</groupId>
       <artifactId>vavi-text-aozora</artifactId>
-      <version>0.0.2</version>
+      <version>0.0.5</version>
     </dependency>
 
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>vavi-commons</artifactId>
-      <version>1.1.8</version>
+      <version>1.1.19</version>
     </dependency>
     <dependency>
-      <groupId>com.github.umjammer.vavi-apps-fuse</groupId>
+      <groupId>com.github.umjammer.vavi-apps-fuse</groupId> <!-- vavi / com.github.umjammer.vavi-apps-fuse -->
       <artifactId>vavi-nio-file-archive</artifactId>
-      <version>0.1.8</version>
+      <version>0.1.11</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.eclipse.jetty</groupId>
+          <artifactId>jetty-http</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>com.github.junrar</groupId>
+          <artifactId>junrar</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
+<dependency>
+  <groupId>org.eclipse.jetty</groupId>
+  <artifactId>jetty-http</artifactId>
+  <version>12.1.11</version>
+</dependency>
+<dependency>
+  <groupId>com.fasterxml.jackson.core</groupId>
+  <artifactId>jackson-core</artifactId>
+  <version>2.22.0</version>
+</dependency>
+
     <dependency>
       <groupId>com.github.umjammer</groupId>
       <artifactId>klab-commons-csv</artifactId>
@@ -90,13 +117,13 @@
     <dependency>
       <groupId>com.github.albfernandez</groupId>
       <artifactId>juniversalchardet</artifactId>
-      <version>2.4.0</version>
+      <version>2.5.0</version>
     </dependency>
 
     <dependency>
       <groupId>com.formdev</groupId>
       <artifactId>flatlaf</artifactId>
-      <version>2.6</version>
+      <version>3.5</version>
       <scope>runtime</scope>
     </dependency>
 
@@ -116,17 +143,28 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>br.ufmg.dcc.nanocomp</groupId>
-      <artifactId>peg</artifactId>
-      <version>0.10.0</version>
-      <scope>test</scope>
-    </dependency>
+	<dependency>
+	    <groupId>com.github.shotishu</groupId>
+	    <artifactId>PEG</artifactId>
+	    <version>0.10.0</version>
+	</dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
       <artifactId>gson</artifactId>
-      <version>2.10</version>
+      <version>2.13.2</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mozilla</groupId>
+      <artifactId>rhino</artifactId>
+      <version>1.8.1</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency> <!-- for jsr-223 -->
+      <groupId>org.mozilla</groupId>
+      <artifactId>rhino-engine</artifactId>
+      <version>1.8.1</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 </project>
